# autoresearch-problems

./: .gitignore  AGENT.md  AGENT_GUIDE.md  LICENSE  PROBLEMS_SUMMARY.md  README.md  VERIFICATION_TIERS.md  all_evaluators.txt  audit_script.py  notebook_functions_extracted.txt  notebook_functions_full.txt  paper_alpha_evolve_paper.md  paper_mathematical_discovery_at_scale.md  pyproject.toml
notebooks/: autocorrelation_problems.ipynb  classical_inequalities.ipynb  difference_bases.ipynb  edges_vs_triangles.ipynb  flat_polynomials.ipynb  imo_2025_p6.ipynb  kakeya_needle_2d.ipynb  kakeya_needle_3d.ipynb  kissing_cylinders.ipynb  no_5_on_a_sphere.ipynb  ovals_problem.ipynb  packing_unit_cubes.ipynb  prime_number_theorem.ipynb  quickstart.ipynb  ring_loading_problem.ipynb  sphere_packing_uncertainty_principles.ipynb  spherical_t_designs.ipynb  sums_differences_problems.ipynb  tammes_problem.ipynb  test.ipynb  the_3d_moving_sofa.ipynb  thomson_problem.ipynb
src/autoresearch_problems/: __init__.py
src/autoresearch_problems.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autoresearch_problems/core/: __init__.py  evaluation.py  pipeline.py  registry.py  result.py  spec.py
src/autoresearch_problems/problems/analysis/erdos_min_overlap/: AGENT.md  README.md  evaluator.py  initial_program.py  initial_prompt.md  spec.yaml
src/autoresearch_problems/program_runners/: __init__.py  subprocess_runner.py
tests/: test_evaluation.py  test_evaluators.py  test_pipeline.py  test_registry.py  test_subprocess_runner.py
(+310 files in other folders)
