[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-problems"
version = "0.1.0"
description = "A universal, framework-agnostic library of benchmark problems for LLM-driven automated research and program evolution frameworks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
runners = [
    "cloudpickle>=3.0",
]
dev = [
    "pytest>=7.0",
    "cloudpickle>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"autoresearch_problems" = [
    "problems/**/*.yaml",
    "problems/**/*.py",
    "problems/**/*.md",
]
